--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/scss/style.css" />
+    <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
     <div class="container">
