--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="fonts" href="src/fonts/Cherolina.ttf" />
   </head>
   <body>
     <div class="container">
