--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
       <h1 class="nome-casal">Filipe & Sarah</h1>
       <div class="foto-coracao">
-        <img src="src/img/filipe500x500.png" class="img-rounded" alt="" />
+        <img src="img/filipe500x500.png" class="img-rounded" alt="" />
         <div class="div-dias">
-          <img src="src/img/coracao.png" class="coracao" alt="" />
+          <img src="img/coracao.png" class="coracao" alt="" />
         </div>
-        <img src="src/img/sarah500x500.png" class="img-rounded" alt="" />
+        <img src="img/sarah500x500.png" class="img-rounded" alt="" />
       </div>
       <div class="dias-namoro">
         <span class="num-dias"></span>
@@ -28,6 +28,6 @@
 
       <p class="texto"></p>
     </div>
-    <script src="src/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
