--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Relógio</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=Montserrat:wght@200;300;400;500&family=Mrs+Saint+Delafield&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
