--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="nome-casal">Filipe & Sarah</h1>
+      <h1 class="nome-casal" translate="no">Filipe & Sarah</h1>
       <div class="foto-coracao">
         <img src="src/img/filipe500x500.png" class="img-rounded" alt="" />
         <div class="div-dias">
