--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Relógio</title>
+    <title>relogioNamoro</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Herr+Von+Muellerhoff&family=Montserrat:wght@200;300;400;500&family=Mrs+Saint+Delafield&display=swap"
       rel="stylesheet"
@@ -14,12 +14,9 @@
   <body>
     <div class="container">
       <h1 class="nome-casal" translate="no">Filipe & Sarah</h1>
-      <div class="foto-coracao">
-        <img src="src/img/filipe500x500.png" class="img-rounded" alt="" />
-        <div class="div-dias">
-          <img src="src/img/coracao.png" class="coracao" alt="" />
-        </div>
-        <img src="src/img/sarah500x500.png" class="img-rounded" alt="" />
+
+      <div>
+        <img class="img-rounded" src="src/img/filipe&Sarah.png" alt="" />
       </div>
       <div class="dias-namoro">
         <span class="num-dias"></span>
@@ -28,6 +25,7 @@
 
       <p class="texto"></p>
     </div>
+
     <script src="src/js/script.js"></script>
   </body>
 </html>
